<resources>
    <string name="app_name">知了日报</string>

    <string name="nv_menu_item_1">设置</string>
    <string name="nv_menu_item_2">关于</string>
    <string name="nv_menu_item_3">主题</string>
    <string name="nv_menu_item_4">反馈意见</string>
    <string name="nv_menu_item_5">版本信息</string>

    <string name="nv_header_text">We can to be anyone,we can to do anything</string>

    <string name="rv_main_item_1">知乎日报</string>
    <string name="rv_main_item_2">豆瓣</string>
    <string name="rv_main_item_3">天气</string>
    <string name="rv_main_item_4">美图</string>
    <string name="rv_main_item_5">天气</string>

    <!-- guide引导页文字 -->
    <string name="guide_text_1">生活总是让我们遍体鳞伤，\n但到后来</string>
    <string name="guide_text_2">那些受伤的地方\n一定会变成\n我们最强壮的地方</string>
    <string name="guide_text_3">用理想去成就人生，\n不要蹉跎了岁月</string>

    <!--demo名称-->
    <string name="demo_name_1">知乎日报</string>
    <string name="demo_name_2">导航页1</string>
    <string name="demo_name_3">item背景滚动List</string>
    <string name="demo_name_4">item背景滚动Rv</string>
    <string name="demo_name_5">TitanicTextView</string>
    <string name="demo_name_6">视差滚动ViewPager</string>
    <string name="demo_name_7">VariationTabLayout</string>
    <string name="demo_name_8">BublesSwitchView</string>
    <string name="demo_name_9">DrowInterpolatorView</string>
    <string name="demo_name_10">复杂Rv-Glid</string>
    <string name="demo_name_11">头像选择</string>
    <string name="demo_name_12">GradualAppBar</string>
    <string name="demo_name_13">HorizontalTransformIndicator</string>
    <string name="demo_name_100">zxing优化</string>

    <string name="demo_name_1_message">MVP的架构，用RxJava+retrofit2.0来实现网络请求，监听网络状态，有完整的网络错误时的通知前台策略。有统一的消息策略，在不同组件中都可以把消息传到当前显示的activity中。还有一个转场动画，rv中textView和tabView中的TextView联动。切换ViewPage时动态改变appBarLayout和状态栏的背景，不过滑快了就有点不同步了（想解决可以研究一下网上的标签页的框架）。给appBarLayout设置addOnOffsetChangedListener，可以拿到appBarLayout的移动的offset（百分比），就可以控制上面控件的移动了，但是用offset不好控制，效果不好</string>
    <string name="demo_name_2_message">普通的viewPage，给vp设置OnPageChangeListener，在onPageScrolled中控制textView的透明度和大小，用onPageScrolled中的positionOffset（移动的百分比）来控制</string>
    <string name="demo_name_3_message">给lv设置setOnScrollListener，在onScroll中控制item中imageView的滚动，和rv的思路一样。lv可以加header，不过控制起来比较麻烦，要控制和判断的比较多，尤其头部部分隐藏的时候。开启关闭的时候没加动画，而且关闭时lv会跳一下。。用rv就不用这么麻烦，第一的item用不同的type，加载不同的item布局即可，不用考虑item和rv的联动关系</string>
    <string name="demo_name_4_message">监听了rv的setOnScrollListener，用onScrolled(RecyclerView recyclerView, int dx, int dy)中的dx，dy，来判断rv滑动的方向和控制每个item中的imageView的scrollBy（x,y）,就可以达到每个item中的背景随rv滚动，然后判断每个item出现的时候从上还是从下出现，提前设置imageView的scrollTo到指定位置</string>
    <string name="demo_name_5_message">就是一个自定义的textView，给pen设置BitmapShader，设置一个上方透明，下面波浪的图片，然后用ObjectAnimator动态改变textView中的关于BitmapShader的Matrix，产生波浪一边上下移动一边左右移动</string>
    <string name="demo_name_6_message">不怎么样，滚动倒是没问题，但是图不好弄，还不如把所有控件放到pager上控制他们的滚动，而且M以上才可以监听每次滑动到的位置，M以下只能拿到移动的百分比（就不好控制具体距离了）</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="refresh">点击刷新</string>
    <string name="save">保存</string>

    <string name="error_message_network_error">网络错误</string>
    <string name="error_message_parse_error">解析错误</string>
    <string name="error_message_conn_fail">连接失败</string>
    <string name="error_message_certificate_verify_fail">证书验证失败</string>
    <string name="error_message_network_timeout">连接超时</string>
    <string name="error_message_no_network">无网络，请检查网络连接</string>
    <string name="error_message_unknown_error">未知错误</string>
    <string name="error_message_service_data_abnormal">服务器数据异常</string>
    <string name="error_message_network_connections_break">网络连接已断开</string>

    <string name="alert_message_no_network_conn">无网络连接</string>
    <string name="message_out_app_tip">再按一次退出程序</string>
    <string name="save_add_set">保存并设置</string>

</resources>
