<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nv_item_1"
        android:icon="@drawable/toolbar_item_black_48dp"
        android:title="@string/nv_menu_item_1"/>

    <item
        android:id="@+id/nv_item_2"
        android:icon="@drawable/toolbar_item_black_48dp"
        android:title="@string/nv_menu_item_2"/>

    <item
        android:id="@+id/nv_item_3"
        android:icon="@drawable/toolbar_item_black_48dp"
        android:title="@string/nv_menu_item_3"/>

    <item
        android:id="@+id/nv_item_4"
        android:icon="@drawable/toolbar_item_black_48dp"
        android:title="@string/nv_menu_item_4"/>

    <item
        android:id="@+id/nv_item_5"
        android:icon="@drawable/toolbar_item_black_48dp"
        android:title="@string/nv_menu_item_5"/>

</menu>