<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
    >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/guide_text_1"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="160dp"
        android:gravity="right"
        android:text="@string/guide_text_2"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="280dp"
        android:text="@string/guide_text_3"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/bt_guide"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/border_shape_black_bg_white"
        android:text="立刻体验"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:visibility="invisible"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:id="@+id/ll_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:id="@+id/point_1"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/point_red_bg"/>

            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/point_gray_bg"/>

            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/point_gray_bg"/>

        </LinearLayout>

        <View
            android:id="@+id/point_red"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/point_red_bg"/>
    </RelativeLayout>

</RelativeLayout>